2015-11-10  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (edit_draw): Skip a zero-length match only when there
	/is/ a match.  Found with valgrind.  This fixes Savannah bug #41908.

2015-11-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init): Allow exiting from the file browser
	with the same key (^T) as it was entered (as ^G for the help viewer).
	* doc/syntax/changelog.nanorc: Accept longer bug and patch numbers.

2015-11-07  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_replace_loop): Correct the logic for adjusting the
	x position of the mark -- it happened to work because 'mark_begin' is
	NULL when 'old_mark_set' is FALSE.  Also improve the comments.

2015-11-06  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (write_lockfile): Don't bail out when the hostname is
	overlong, but instead truncate it properly and continue.  This fixes
	Ubuntu bug #1509081 reported by Sam Reed.
	* src/global.c (length_of_list), src/winio.c(get_mouseinput): Don't
	check whether a function has a help line, since all of them have.
	(And even if some didn't, they would still be valid functions.)
	* src/cut.c (cut_line): There is no need to set 'openfile->mark_begin'
	just like that; it will be set when 'openfile->mark_set' becomes TRUE.
	* src/text.c (do_redo): Delete a redundant assignment.

2015-11-02  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.h: Delete an unused type definition.
	* src/nano.h: Improve several comments.
	* src/text.c (do_wrap): Elide two variables.
	* src/cut.c (do_cut_text): Chop the 'undoing' parameter, so that the
	calls of this function become more symmetrical.

2015-10-31  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (copy_from_filestruct): When pasting while the mark is
	on, the mark's pointer needs to be refreshed only when it is on the
	same line as the cursor, and the mark's x coordinate only when the