@@ -1,6 +1,7 @@
 2015-11-10  Benno Schulenberg  <bensberg@justemail.net>
 	* src/winio.c (edit_draw): Skip a zero-length match only when there
 	/is/ a match.  Found with valgrind.  This fixes Savannah bug #41908.
+	* src/files.c (do_lockfile, update_poshistory): Plug memory leaks.
 
 2015-11-08  Benno Schulenberg  <bensberg@justemail.net>
 	* src/global.c (shortcut_init): Allow exiting from the file browser
